--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     color: #3d1f14;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, nav, header {
     font-family: 'Playfair Display', serif;
 }
 
@@ -18,16 +18,23 @@ p, li, span, a, div {
 }
 
 header {
+    background-color: #3e2723;
+    padding: 1rem;
     text-align: center;
-    padding: 2rem;
 }
 
 header img {
-    width: 200px;
-    height: 200px;
+    width: 175px;
+    height: 175px;
     object-fit: cover;
     border-radius: 50%;
+    border: 4px solid #f5e3d2;
     transition: transform 0.3s ease;
+}
+
+.logo:hover {
+    content: url('assets/oresglow-logo-hover.gif');
+    transform: scale(1.1);
 }
 
 header img:hover {
