--- a/styles.css
+++ b/styles.css
@@ -13,19 +13,27 @@ h1, h2, h3, h4, h5, h6, nav, header {
     font-family: 'Playfair Display', serif;
 }
 
+h1 {
+    color: #f5e3d2;
+}
+
 p, li, span, a, div {
     font-family: 'Georgia', serif;
 }
 
 header {
     background-color: #3e2723;
-    padding: 1rem;
+    height: 80px;
+    justify-content: flex-start;
+    display: flex;
+    align-items: center;
+    padding: 0 1rem;
     text-align: center;
 }
 
 header img {
-    width: 175px;
-    height: 175px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 50%;
     border: 4px solid #f5e3d2;
