--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,21 @@ p, li, span, a, div {
 header {
     background-color: #3e2723;
     height: 80px;
-    justify-content: flex-start;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0 1rem;
+}
+
+.logo-container {
+    flex: 0 0 auto;
+}
+
+.title-container {
+    flex: 1;
     text-align: center;
 }
+
 
 header img {
     width: 150px;
